<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/login_title">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="登录"
            android:textColor="#FF1C1C1C"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView19"
            android:layout_alignBottom="@+id/textView19"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="注册"
            android:visibility="gone"/>

    </RelativeLayout>

    <com.feifandaiyu.feifan.view.DrawableTextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:text="欢迎来到非凡贷遇"
        android:textSize="20sp"
        app:drawableHeight="25dp"
        app:drawableWidth="25dp"
        app:leftDrawable="@drawable/feifan"/>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_below="@+id/logo"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="18dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_mobile_flag"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_login_username"
                android:inputType="textVisiblePassword"
                android:maxLength="11"
                android:singleLine="true"
                android:text=""
                android:textColor="#FF333333"
                android:textColorHint="#FFCCCCCC"
                android:textSize="14dp"/>

            <ImageView
                android:id="@+id/iv_clean_phone"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#DDDDDD"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="18dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_password_flag"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:singleLine="true"
                android:text=""
                android:textColor="#FF333333"
                android:textColorHint="#FFCCCCCC"
                android:textSize="14dp"/>

            <ImageView
                android:id="@+id/clean_password"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/iv_show_pwd"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/pass_gone"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#DDDDDD"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/bg_btn_login_selected"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"

            android:gravity="center"
            >

            <TextView
                android:id="@+id/send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="短信登录"
                android:textColor="#FF666666"
                android:textSize="15dp"/>

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/send_message"
                android:background="#FF666666"
                />


            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/send_message"
                android:text="@string/login_forget_pwd"
                android:textColor="#FF666666"
                android:textSize="15dp"/>
        </RelativeLayout>
    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="30dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:scaleType="fitEnd"
        android:src="@drawable/pic_login"/>

    <!--<com.feifandaiyu.feifan.view.CountDownTimerButton-->
    <!--android:id="@+id/tv_timmer"-->
    <!--android:layout_width="110dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/get_sms_code"-->
    <!--android:textColor="#ffffff"-->
    <!--android:textSize="12sp"-->
    <!--app:disableBackground="@drawable/get_sms_code_btn_disable"-->
    <!--app:normalBackground="@drawable/get_sms_code_btn_selector"-->
    <!--/>-->

</LinearLayout>