<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.feifandaiyu.feifan.activity.login.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#cadfdfdf">

        <ImageView
            android:id="@+id/back_black"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/back_black"
            android:layout_alignTop="@+id/textView19"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="注册"
            android:textColor="#FF1C1C1C"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView19"
            android:layout_alignBottom="@+id/textView19"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:text="登录"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="18dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_mobile_flag"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_login_username"
            android:inputType="textVisiblePassword"
            android:maxLength="11"
            android:singleLine="true"
            android:text=""
            android:textColor="#FF333333"
            android:textColorHint="#FFCCCCCC"
            android:textSize="14dp"/>

        <ImageView
            android:id="@+id/iv_clean_phone"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_clear"
            android:visibility="gone"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#DDDDDD"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="18dp">

        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/code"/>

        <EditText
            android:id="@+id/et_identify_code"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入短信验证码"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:text=""
            android:textColor="#FF333333"
            android:textColorHint="#FFCCCCCC"
            android:textSize="14dp"/>

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_toEndOf="@+id/send_message"
            android:background="#FF666666"
            />

        <com.feifandaiyu.feifan.view.CountDownTimerButton
            android:id="@+id/tv_timmer"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@null"
            android:text="@string/get_sms_code"
            android:textColor="@color/msg"
            android:textSize="14sp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#DDDDDD"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="18dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_password_flag"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_login_password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:singleLine="true"
            android:text=""
            android:textColor="#FF333333"
            android:textColorHint="#FFCCCCCC"
            android:textSize="14dp"/>

        <ImageView
            android:id="@+id/clean_password"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_clear"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/iv_show_pwd"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:scaleType="centerInside"
            android:src="@drawable/pass_gone"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#DDDDDD"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/bg_btn_login_selected"
        android:enabled="false"
        android:text="注册"
        android:textColor="@color/white"
        android:textSize="18dp"/>

</LinearLayout>
